--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express": "^4.17.3",
         "mongoose": "^6.2.9",
         "morgan": "^1.10.0",
+        "node-geocoder": "^4.0.0",
         "slugify": "^1.6.5"
     },
     "devDependencies": {
