--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "author": "vitlyc",
     "license": "MIT",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "colors": "^1.4.0",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-fileupload": "^1.3.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.9",
         "morgan": "^1.10.0",
         "node-geocoder": "^4.0.0",
