--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
         "body-parser": "^1.20.0",
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-fileupload": "^1.3.1",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^6.3.0",
+        "helmet": "^5.0.2",
+        "hpp": "^0.2.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.9",
         "morgan": "^1.10.0",
         "node-geocoder": "^4.0.0",
         "nodemailer": "^6.7.3",
-        "slugify": "^1.6.5"
+        "slugify": "^1.6.5",
+        "xss-clean": "^0.1.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
